--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.10.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "dotenv-webpack": "^8.0.1",
     "axios": "^1.6.7",
     "d3": "^7.8.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
+    "rc-dialog": "^9.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
