--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
     "rc-dialog": "^9.3.4",
+    "rc-input": "^1.4.3",
+    "rc-select": "^14.11.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react18-input-otp": "^1.1.4",
     "sass": "^1.71.1"
   },
   "devDependencies": {
