--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-transition-group": "^4.4.5",
     "react18-input-otp": "^1.1.4",
     "sass": "^1.71.1"
   },
